# jmseq

./: .gitattributes  .gitignore  PYTHON_PORT_PLAN.md  README.md  pbc_long.csv  pbc_surv.csv  pyproject.toml  validate_pbc.py
jmseq/: DESCRIPTION  NAMESPACE
jmseq/R/: jmseqfunctions.R  pbc-data.R
jmseq/data/: pbc.rda
jmseq/inst/doc/: jmseq.html
jmseq/man/: ctstanfit.fold.Rd  cut.intervals.Rd  fit.poissontsplit.Rd  formatpbc.Rd  kalmanwide.Rd  listmodels.Rd  pbc.Rd  predict.testdata.Rd  split.SurvLong.Rd  summary.predictions.Rd  tabulate.predictions.Rd  test.imputed.Rd  train.poissontsplit.Rd  trainsplit.long.Rd  trainsplit.surv.Rd
jmseq/stan/: poissonglm.stan
jmseq/vignettes/: jmseq.Rmd  jmseq.html  xvalid.Rmd  xvalid.html
jmseq/vignettes/jmseq_cache/: __packages  configs_fc1235aa217c50106c07f844ba388875.RData  configs_fc1235aa217c50106c07f844ba388875.rdb  configs_fc1235aa217c50106c07f844ba388875.rdx  cstat_plot_47cee34c74b9404f7da327d74934f5fd.RData  cstat_plot_47cee34c74b9404f7da327d74934f5fd.rdb  cstat_plot_47cee34c74b9404f7da327d74934f5fd.rdx  cv_06886974cdb0a46839c49968bc841f36.RData  cv_06886974cdb0a46839c49968bc841f36.rdb  cv_06886974cdb0a46839c49968bc841f36.rdx  fold_table2_add5e2cb2d19ddbac3c2fc33c8cc22aa.RData  fold_table2_add5e2cb2d19ddbac3c2fc33c8cc22aa.rdb  fold_table2_add5e2cb2d19ddbac3c2fc33c8cc22aa.rdx  fold_table_3b05e02f36764c44bfa9217c80485fa1.RData  fold_table_3b05e02f36764c44bfa9217c80485fa1.rdb  (+10 more)
src/jmseq/: __init__.py
src/jmseq/data/: schema.py  (+2 more)
tests/: conftest.py  test_kalman.py  test_lgssm.py  test_pipeline.py  test_poisson_glm.py
(+11 files in other folders)
