[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "jmseq"
version = "0.1.0"
description = "Joint modelling of longitudinal and time-to-event data via sequential Bayesian updating"
requires-python = ">=3.10"
dependencies = [
    "jax>=0.4.25",
    "jaxlib",
    "numpyro>=0.15",
    "optax>=0.2",
    "numpy>=1.26",
    "pandas>=2.1",
    "scipy>=1.12",
]

[tool.setuptools.packages.find]
where = ["src"]
